[package]
name = "PathOfBuilding"
version = "2.34.1"
edition = "2021"

[[bin]]
bench = false
path = "evloop/main.rs"
name = "path-of-building"

[dependencies]
mlua = { version = "0.9.1", features = ["luajit", "vendored"] }
curl = { version = "0.4.44", features = ["ssl"] }
chrono = "0.4.31"
lazy_static = "1.4.0"
winit = "0.29.4"
glow = "0.12.0"
imgui = "0.11.0"
imgui-winit-support = "0.11.0"
glutin = "0.29.1"
imgui-glow-renderer = "0.11.0"
image = "0.24.7"
# This crate is probably an overkill but I just wanted to try it
bitflags = "2.4.1"
